add build profiles for CLI and GUI